syntax = "proto3";

import "google/protobuf/timestamp.proto";

package workspace;
option go_package = "github.com/smartmemos/memos/internal/proto/model/workspace";

message Profile {
  // The name of instance owner.
  // Format: users/{user}
  string owner = 1;
  // version is the current version of instance
  string version = 2;
  // mode is the instance mode (e.g. "prod", "dev" or "demo").
  string mode = 3;
  // instance_url is the URL of the instance.
  string instance_url = 6;
}
